--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -1,7 +1,7 @@
 * { box-sizing: border-box; }
 body {
 background-color: #ffffff;
-background-image: url(houses.jpg);
+background-image: url(wall.jpg);
 background-repeat: no-repeat; 
 background-size: cover; 
 background-attachment: fixed; 
