--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -22,6 +22,7 @@ header {
 background-color: #2E8B57; 
 background-image: url(JasmineDragon.jpg);
 background-repeat: no-repeat; 
+background-size: 150px 150px;
 color: #231814;
 padding-left: 240px;
 padding-top: 5px; 
