--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -90,7 +90,7 @@ padding-left: 10px;
 padding-right: 10px; }
 #homehero { 
 height: 300px; 
-background-image: url(hero.jpg);
+background-image: url(basingse2.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
