--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -1,7 +1,7 @@
 * { box-sizing: border-box; }
 body {
-background-color: #ffffff;
-background-image: url(anime2.jpg);
+background-color: #fffff;
+background-image: url(basingse.jpg);
 background-repeat: no-repeat; 
 background-size: cover; 
 background-attachment: fixed; 
@@ -20,9 +20,8 @@ padding: 0;
 }   
 header { 
 background-color: #2E8B57; 
-background-image: url(JasmineDragon.jpg);
+background-image: url(coffeelogo.jpg);
 background-repeat: no-repeat; 
-background-size: 200px 235px;
 color: #231814;
 padding-left: 240px;
 padding-top: 5px; 
@@ -31,10 +30,10 @@ padding-bottom: 5px;
 header a { text-decoration: none; }
 header a:link       { color: #ffffff; }
 header a:visited { color: #231814; }
-header a:hover      { color: #cc9900;}
 h1 { font-size: 3em; 
-color: white; 
-text-shadow: 6px 6px #cc9900;}
+color: #white; 
+text-shadow:6px 6px #cc9900;
+}
 h2 { color: #e6ac00; }
 h3, dt { color: #e6ac00; }
 h4 { 
@@ -56,18 +55,14 @@ padding-bottom: 5px;
 width: 200px; 
 }
 nav a { text-decoration: none; }
-nav a:link       { color: #ffffff;
-text-shadow: 4px 4px #000000;}
-nav a:visited { color: #ffffff; }
-nav a:hover     { color: #ffffff; 
-text-decoration: underline wavy green;
-text-underline-offset: 2px;}
-nav ul {
-list-style-type: none;
-padding-left: 0; }
-nav li {
-padding-bottom: 10px;  
+nav a:link       { color: #ffffff; 
+text-shadow: 4px 4px #000000;
 }
+nav a:visited { color: #ffffff; }
+nav a:hover     { color: #ffffff; }
+nav ul {
+list-style-type: none; 
+padding-left: 0; }
 main { 
 background-color: #FEF6C2; 
 display: block; 
@@ -95,7 +90,7 @@ padding-left: 10px;
 padding-right: 10px; }
 #homehero { 
 height: 300px; 
-background-image: url(basingse2.jpg);
+background-image: url(hero.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
@@ -111,6 +106,7 @@ background-image: url(heroguitar.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
+
 footer {
 background-color: #2E8B57; 
 font-size: .60em; 
