--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -102,7 +102,7 @@ background-size: 100% 100%;
 }
 #heromugs {
 height: 300px; 
-background-image: url(iroh.jpg);
+background-image: url(tea.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
