--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -102,7 +102,7 @@ background-size: 100% 100%;
 }
 #heromugs {
 height: 300px; 
-background-image: url(tea2.jpg);
+background-image: url(bss.jpg);
 background-repeat: no-repeat; 
 background-size: 80% 80%; 
 }
