--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -31,10 +31,13 @@ header a { text-decoration: none; }
 header a:link       { color: #ffffff; }
 header a:visited { color: #231814; }
 h1 { font-size: 3em; 
-color: #white; 
+color: #ffffff; 
 text-shadow:6px 6px #cc9900;
 }
-h2 { color: #e6ac00; }
+h2 { color: #e6ac00;
+text-shadow:1px 1px #000000;}
+h3 { color: #e6ac00; 
+text-shadow:1px 1px #000000}
 h4, dt { color: #b35900;
 text-shadow:2px 2px #000000;
 }
@@ -98,13 +101,13 @@ background-size: 100% 100%;
 }
 #heromugs {
 height: 300px; 
-background-image: url(bss.jpg);
+background-image: url(heromugs.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
 #heroguitar {
 height: 300px; 
-background-image: url(bss.jpg);
+background-image: url(heroguitar.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
