--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -1,7 +1,7 @@
 * { box-sizing: border-box; }
 body {
 background-color: #fffff;
-background-image: url(basingse.jpg);
+background-image: url(anime2.jpg);
 background-repeat: no-repeat; 
 background-size: cover; 
 background-attachment: fixed; 
@@ -20,7 +20,7 @@ padding: 0;
 }   
 header { 
 background-color: #2E8B57; 
-background-image: url(coffeelogo.jpg);
+background-image: url(JasmineDragon.jpg);
 background-repeat: no-repeat; 
 color: #231814;
 padding-left: 240px;
