--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -95,19 +95,19 @@ padding-left: 10px;
 padding-right: 10px; }
 #homehero { 
 height: 300px; 
-background-image: url(hero.jpg);
+background-image: url(basingse2.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
 #heromugs {
 height: 300px; 
-background-image: url(heromugs.jpg);
+background-image: url(bss.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
 #heroguitar {
 height: 300px; 
-background-image: url(heroguitar.jpg);
+background-image: url(bss.jpg);
 background-repeat: no-repeat; 
 background-size: 100% 100%; 
 }
