--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -23,6 +23,7 @@ background-color: #2E8B57;
 background-image: url(JasmineDragon.jpg);
 background-repeat: no-repeat; 
 color: #231814;
+background-size: 250px
 padding-left: 240px;
 padding-top: 5px; 
 padding-bottom: 5px; 
