--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -64,7 +64,15 @@ nav a:link       { color: #ffffff;
 text-shadow: 4px 4px #000000;
 }
 nav a:visited { color: #ffffff; }
-nav a:hover     { color: #ffffff; }
+nav a:hover     { color: #ffffff;
+text-decoration: underline wavy green;
+text-underline-offset: 1px;}
+nav ul {
+list-style-type: none;
+padding-left: 0; }
+nav li {
+padding-bottom: 10px;  
+}
 nav ul {
 list-style-type: none; 
 padding-left: 0; }
