--- a/jasminedragon.css
+++ b/jasminedragon.css
@@ -65,7 +65,7 @@ text-shadow: 4px 4px #000000;
 }
 nav a:visited { color: #ffffff; }
 nav a:hover     { color: #ffffff;
-text-decoration: underline wavy green;
+text-decoration: underline wavy white;
 text-underline-offset: 1px;}
 nav ul {
 list-style-type: none;
